--- a/config.env
+++ b/config.env
@@ -6,3 +6,8 @@ DATABASE_PASSWORD=gM8ntE5WWoomgenz
 
 JWT_SECRET=my-app-secure-ecommerce-clothing
 JWT_EXPIRES_IN=3d 
+
+EMAIL_USERNAME=cdd142a7fe59c9
+EMAIL_PASSWORD=7e6d0bce0ae888
+EMAIL_HOST=smtp.mailtrap.io
+EMAIL_PORT=25
