--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^6.5.4",
     "morgan": "^1.10.0",
     "ndb": "^1.1.5",
+    "nodemailer": "^6.7.8",
     "nodemon": "^2.0.19",
     "validator": "^13.7.0"
   }
