save jwt cookie

--- a/config.env
+++ b/config.env
@@ -6,6 +6,7 @@ DATABASE_PASSWORD=gM8ntE5WWoomgenz
 
 JWT_SECRET=my-app-secure-ecommerce-clothing
 JWT_EXPIRES_IN=3d 
+JWT_COOKIE_EXPIRES_IN=3
 
 EMAIL_USERNAME=cdd142a7fe59c9
 EMAIL_PASSWORD=7e6d0bce0ae888
