--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
     "express-rate-limit": "^6.6.0",
     "helmet": "^6.0.0",
     "hpp": "^0.2.3",
+    "ionic": "^5.4.16",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.4",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "ndb": "^1.1.5",
     "nodemailer": "^6.7.8",
     "nodemon": "^2.0.19",
+    "sharp": "^0.31.1",
     "validator": "^13.7.0",
     "xss-clean": "^0.1.1"
   }
